--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 	<!-- <script type="text/javascript" src="/static/d3/d3.js"></script> -->
 	<script src="https://d3js.org/d3.v4.min.js"></script>
-	<!-- <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script> -->
-	<!-- <script src="https://d3js.org/d3.v4.js"></script> -->
+	<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+	<script src="https://d3js.org/d3.v4.js"></script>
 
 <head>
    <h1 align="center"><u> How SpeedDating works?</u></h1>
@@ -96,9 +96,14 @@ rect.background {
 <script type="text/javascript" src="static/parfait/js/bar_match.js"></script>
 <script type="text/javascript" src="static/parfait/js/bar_pro.js"></script>
 <!-- <script type="text/javascript" src="/static/parfait/js/histo.js"></script> -->
-<!-- <script type="text/javascript" src="/static/parfait/js/histo_dynamique.js"></script> -->
-<!-- <script type="text/javascript" src="/static/parfait/js/pie_motif.js"></script> -->
+<script type="text/javascript" src="/static/parfait/js/histo_dynamique.js"></script>
+<script type="text/javascript" src="/static/parfait/js/pie_motif.js"></script>
 
+
+<script type="text/javascript" src="static/antonin/Qualities/js/legend.js"></script>
+<script type="text/javascript" src="static/antonin/Qualities/js/plots.js"></script>
+
+<script type="text/javascript" src="static/lalifinarita/js/hobbies_2.js"></script>
 
 <script>
 
