Modifs sur les tailles de graph

--- a/index.html
+++ b/index.html
@@ -44,9 +44,16 @@ rect.background {
   margin-left:auto;
   margin-right:auto;
   height: 520px;
-  width: 750px;
-  
+  width: 850px;  
 }
+
+.center-div2 {
+  margin-left:auto;
+  margin-right:auto;
+  height: 850px;
+  width: 850px;  
+}
+
 .right-div {
   margin-left:auto;
   margin-right:auto;
@@ -84,7 +91,7 @@ rect.background {
  </i></p>
 </div>
 
-<div class="center-div" id="graphDiv2" style="border: thin solid black", align="center">
+<div class="center-div2" id="graphDiv2" style="border: thin solid black", align="center">
 <p><b><i> Graphs</b>                                     
  </i></p>
 </div>
@@ -96,7 +103,7 @@ rect.background {
 <script type="text/javascript" src="static/parfait/js/bar_match.js"></script>
 <script type="text/javascript" src="static/parfait/js/bar_pro.js"></script>
 <!-- <script type="text/javascript" src="/static/parfait/js/histo.js"></script> -->
-<!-- <script type="text/javascript" src="/static/parfait/js/histo_dynamique.js"></script> -->
+<script type="text/javascript" src="/static/parfait/js/histo_dynamique.js"></script> 
 <script type="text/javascript" src="static/parfait/js/pie_motif.js"></script>
 
 
